--- a/index.html
+++ b/index.html
@@ -6,17 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Florian Hoehle, mail@FlorianHoehle.de">
     <link rel="stylesheet" href="main.css">
-    <title>TITLE</title>
+    <title>Switches</title>
 </head>
 <body>
+<!-- SWITCH ONE -->
     <label for="checkbox">
+        Checkbox1
         <input type="checkbox" name="checkbox" id="checkbox">
         <div class="switch">
             <div class="slider"></div>
         </div>
     </label>
-
-    <div class="box"><div class="box2"></div></div>
-    <div class="box3"></div>
+<!-- SWITCH TWO -->
+    <label for="checkbox2">
+        Checkbox2
+        <input type="checkbox" name="checkbox2" id="checkbox2">
+        <div class="switch switch2"></div>
+    </label>
 </body>
 </html>
