--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- SWITCH ONE -->
     <label for="checkbox">
-        Checkbox1
+        Checkbox with two DIVs...
         <input type="checkbox" name="checkbox" id="checkbox">
         <div class="switch">
             <div class="slider"></div>
@@ -19,7 +19,7 @@
     </label>
 <!-- SWITCH TWO -->
     <label for="checkbox2">
-        Checkbox2
+        Checkbox with one DIV and ::before...
         <input type="checkbox" name="checkbox2" id="checkbox2">
         <div class="switch switch2"></div>
     </label>
